chore: Update button labels in contact form

--- a/mynewapp/migrations/template/contact.html
+++ b/mynewapp/migrations/template/contact.html
@@ -13,14 +13,14 @@
         ,
         style="background-color: greenyellow; border-radius: 6px"
       >
-        Submit
+        Submit Selection
       </button>
       <button
         type="reset"
         ,
         style="background-color: tomato; border-radius: 6px"
       >
-        Reset
+        Reset Selection
       </button>
     </form>
   </body>
