--- a/mynewapp/migrations/template/success.html
+++ b/mynewapp/migrations/template/success.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Success</title>
+    <title>Success!</title>
   </head>
   <body bgcolor="beige">
-    <h1 style="color: dodgerblue; font-size: 50px">
-      Thank you for registering! 🎉
+    <h1 style="color: maroon; font-size: 50px">
+      Thank you for registering! 😊
     </h1>
-    <p style="color: darkolivegreen; font-size: 30px">
-      We will get back to you shortly. 📞
+    <p style="color: darkolivegreen; font-size: 40px">
+      We will get back to you shortly. 📧
     </p>
   </body>
 </html>
