--- a/mynewapp/migrations/template/contact.html
+++ b/mynewapp/migrations/template/contact.html
@@ -4,7 +4,7 @@
     <title>Contact</title>
   </head>
   <body style="color: blanchedalmond">
-    <h1 style="color: darkolivegreen">Contact</h1>
+    <h1 style="color: darkolivegreen; text-align: center">Contact</h1>
     <form method="post">
       {% csrf_token %} {{ form.as_p }}
 
