--- a/mynewapp/migrations/template/success.html
+++ b/mynewapp/migrations/template/success.html
@@ -4,10 +4,10 @@
     <title>Success!</title>
   </head>
   <body bgcolor="beige">
-    <h1 style="color: maroon; font-size: 50px">
+    <h1 style="color: maroon; font-size: 50px; text-align: center">
       Thank you for registering! 😊
     </h1>
-    <p style="color: darkolivegreen; font-size: 40px">
+    <p style="color: darkolivegreen; font-size: 40px; text-align: center">
       We will get back to you shortly. 📧
     </p>
   </body>
