--- a/mynewapp/migrations/template/contact.html
+++ b/mynewapp/migrations/template/contact.html
@@ -3,7 +3,7 @@
   <head>
     <title>Contact</title>
   </head>
-  <body style="color: blanchedalmond">
+  <body style="color: darkred">
     <h1 style="color: darkolivegreen; text-align: center">Contact</h1>
     <form method="post">
       {% csrf_token %} {{ form.as_p }}
