--- a/mynewapp/migrations/template/success.html
+++ b/mynewapp/migrations/template/success.html
@@ -3,12 +3,12 @@
   <head>
     <title>Success!</title>
   </head>
-  <body bgcolor="beige">
+  <body>
     <h1 style="color: maroon; font-size: 50px; text-align: center">
-      Thank you for registering! 😊
+      Thank you for registering!
     </h1>
     <p style="color: darkolivegreen; font-size: 40px; text-align: center">
-      We will get back to you shortly. 📧
+      We will get back to you shortly.
     </p>
   </body>
 </html>
